# aio

./: CMakeLists.txt  README.md  main.cpp  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml
include/aio/: channel.h  context.h  error.h  io.h  thread.h  worker.h
include/aio/ev/: buffer.h  event.h  pipe.h  signal.h  timer.h
include/aio/http/: request.h  url.h  websocket.h
include/aio/net/: dgram.h  dns.h  net.h  ssl.h  stream.h
include/aio/sync/: channel.h
sample/: CMakeLists.txt
sample/http/: main.cpp
sample/ssl/: client.cpp  main.cpp  server.cpp
sample/tcp/: client.cpp  main.cpp  server.cpp
sample/ws/: main.cpp
src/: context.cpp  error.cpp  io.cpp  worker.cpp
src/ev/: buffer.cpp  event.cpp  pipe.cpp  signal.cpp  timer.cpp
src/http/: request.cpp  url.cpp  websocket.cpp
src/net/: dgram.cpp  dns.cpp  net.cpp  ssl.cpp  stream.cpp
test/: CMakeLists.txt  channel.cpp  thread.cpp
test/ev/: buffer.cpp  event.cpp  pipe.cpp  signal.cpp  timer.cpp
test/http/: request.cpp  url.cpp
test/net/: dgram.cpp  dns.cpp  net.cpp  ssl.cpp  stream.cpp
test/sync/: channel.cpp
